Add error handle function for cvode cpu solver

--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -69,11 +69,15 @@ class Naunet {
     void *cv_mem_;
     SUNLinearSolver cv_ls_;
 
+    realtype ab_init_[NEQUATIONS];
+    realtype ab_tmp_[NEQUATIONS]; // Temporary state for error handling
+
     /* {% endif %} */
 
     int GetCVStates(void *cv_mem, 
                     long int &nst, long int &nfe, long int &nsetups, long int &nje, 
                     long int &netf, long int &nge, long int &nni, long int &ncfn);
+    int HandleError(int flag, realtype *ab, realtype dt, realtype t0);
     static int CheckFlag(void *flagvalue, const char *funcname, int opt, FILE *errf);
 };
 
