Update enzo patch

--- a/naunet/templates/patches/enzo/Grid_NaunetWrapper.C.j2
+++ b/naunet/templates/patches/enzo/Grid_NaunetWrapper.C.j2
@@ -63,10 +63,14 @@ int grid::NaunetWrapper()
   
   // Compute the size of the fields.
  
-  int i;
+  int i, j, k, igrid;
   int size = 1;
   for (int dim = 0; dim < GridRank; dim++)
     size *= GridDimension[dim];
+
+  int activesize = 1;
+  for (int dim = 0; dim < GridRank; dim++)
+    activesize *= (GridDimension[dim] - 2*NumberOfGhostZones);
 
   Eint32 *g_grid_dimension, *g_grid_start, *g_grid_end;
   g_grid_dimension = new Eint32[GridRank];
@@ -122,78 +126,6 @@ int grid::NaunetWrapper()
   }
   float afloat = float(a);
 
-  /* Metal cooling codes. */
- 
-  int MetalNum = 0, SNColourNum = 0;
-  int MetalFieldPresent = FALSE;
-
-  // First see if there's a metal field (so we can conserve species in
-  // the solver)
-  MetalNum = FindField(Metallicity, FieldType, NumberOfBaryonFields);
-  SNColourNum = FindField(SNColour, FieldType, NumberOfBaryonFields);
-  MetalFieldPresent = (MetalNum != -1 || SNColourNum != -1);
-
-  // Double check if there's a metal field when we have metal cooling
-  if (MetalCooling && MetalFieldPresent == FALSE) {
-    if (debug)
-      fprintf(stderr, "Warning: No metal field found.  Turning OFF MetalCooling.\n");
-    MetalCooling = FALSE;
-    MetalNum = 0;
-  }
-
-  // If both metal fields (Pop I/II and III) exist, create a field
-  // that contains their sum
-
-  float *MetalPointer = NULL;
-  float *TotalMetals = NULL;
-
-  if (MetalNum != -1 && SNColourNum != -1) {
-    TotalMetals = new float[size];
-    for (i = 0; i < size; i++)
-      TotalMetals[i] = BaryonField[MetalNum][i] + BaryonField[SNColourNum][i];
-    MetalPointer = TotalMetals;
-  } // ENDIF both metal types
-  else {
-    if (MetalNum != -1)
-      MetalPointer = BaryonField[MetalNum];
-    else if (SNColourNum != -1)
-      MetalPointer = BaryonField[SNColourNum];
-  } // ENDELSE both metal types
-
-  int temp_thermal = FALSE;
-  float *thermal_energy;
-  if ( UseMHD ){
-    iBx = FindField(Bfield1, FieldType, NumberOfBaryonFields);
-    iBy = FindField(Bfield2, FieldType, NumberOfBaryonFields);
-    iBz = FindField(Bfield3, FieldType, NumberOfBaryonFields);  
-  }
-
-  if (HydroMethod==Zeus_Hydro) {
-    thermal_energy = BaryonField[TENum];
-  }
-  else if (DualEnergyFormalism) {
-    thermal_energy = BaryonField[GENum];
-  }
-  else {
-    temp_thermal = TRUE;
-    thermal_energy = new float[size];
-    for (i = 0; i < size; i++) {
-      thermal_energy[i] = BaryonField[TENum][i] - 
-        0.5 * POW(BaryonField[Vel1Num][i], 2.0);
-      if(GridRank > 1)
-        thermal_energy[i] -= 0.5 * POW(BaryonField[Vel2Num][i], 2.0);
-      if(GridRank > 2)
-        thermal_energy[i] -= 0.5 * POW(BaryonField[Vel3Num][i], 2.0);
-
-      if( UseMHD ) {
-        thermal_energy[i] -= 0.5 * (POW(BaryonField[iBx][i], 2.0) + 
-                                    POW(BaryonField[iBy][i], 2.0) + 
-                                    POW(BaryonField[iBz][i], 2.0)) / 
-          BaryonField[DensNum][i];
-      }
-    } // for (int i = 0; i < size; i++)
-  }
-
   float *temperature = new float[size]; 
   if (this->ComputeTemperatureField(temperature) == FAIL){
     ENZO_FAIL("Error in grid->ComputeTemperatureField.");
@@ -210,84 +142,101 @@ int grid::NaunetWrapper()
   // Set your parameters here
   NaunetData data;
 
-  float y[NAUNET_NEQNS];
+  float y[NAUNET_NEQUATIONS];
 
-  for (i=0; i<size; i++) {
-    data.nH = BaryonField[iden][i] / (Mu * mh);
+  for (k = GridStartIndex[2]; k <= GridEndIndex[2]; k++) {
+    for (j = GridStartIndex[1]; j <= GridEndIndex[1]; j++) {
+      igrid = (k * GridDimension[1] + j) * GridDimension[0] + GridStartIndex[0];
+      for (i = GridStartIndex[0]; i <= GridEndIndex[0]; i++, igrid++) {
 
-    {% for ab in abund -%}
-      {{ ab }};
-    {% endfor -%}
+        data.nH = BaryonField[iden][i] / (1.4 * mh);
+        data.Tgas = temperature[igrid];
 
-    naunet.Solve(y, dt_chem * TimeUnits, &data);
+        {% for ab in abund -%}
+          {{ ab }};
+        {% endfor %}
 
-    {% for iab in invabund -%}
-      {{ iab }};
-    {% endfor -%}
+        naunet.Solve(y, dt_chem * TimeUnits, &data);
+
+        {% for iab in invabund -%}
+          {{ iab }};
+        {% endfor %}
+
+      }
+    }
   }
   
   {% else %}
 
-  int cur = 0, sidx;
+  int sidx;
 
-  while (cur < size) {
-    int nsystem = MAX_NSYSTEMS;
-    if (size - cur < MAX_NSYSTEMS) {
-      nsystem = size - cur;
-      naunet.Reset(nsystem);
-    }
-    cur += MAX_NSYSTEMS;
+  // Solve a slice in active space every step
+  int slicesize = (GridEndIndex[1] - GridStartIndex[1]) * (GridEndIndex[0] - GridStartIndex[0]);
+  naunet.Reset(slicesize);
 
-    // set your parameters here
-    NaunetData *data = new NaunetData[nsystem];
-    for (i=0; i<nsystem; i++) {
-      data[i].nH = BaryonField[iden][i] / (Mu * mh);
-    }
+  for (k = GridStartIndex[2]; k <= GridEndIndex[2]; k++) {
+    sidx = 0;
+    for (j = GridStartIndex[1]; j <= GridEndIndex[1]; j++) {
+      igrid = (k * GridDimension[1] + j) * GridDimension[0] + GridStartIndex[0];
+      for (i = GridStartIndex[0]; i <= GridEndIndex[0]; i++, igrid++, sidx++) {
 
-    float *y = new double[nsystem * NEQUATIONS];
+        data.nH = BaryonField[iden][igrid] / (1.4 * mh);
+        data.Tgas = temperature[igrid];
 
-    for (sidx=0, i=cur; i<cur+nsystem; sidx+=NEQUATIONS, i++) {
-      {% for ab in abund -%}
-        {{ ab }} * NumberDensityUnits;
-      {% endfor -%}
-    }
+        {% for ab in abund -%}
+          {{ ab }};
+        {% endfor %}
 
-    naunet.Solve(y, dt_chem * TimeUnits, data);
+        naunet.Solve(y, dt_chem * TimeUnits, &data);
 
-    for (sidx=0, i=cur; i<cur+nsystem; sidx+=NEQUATIONS, i++) {
-      {% for iab in invabund -%}
-        {{ iab }} / NumberDensityUnits;
-      {% endfor -%}
+        {% for iab in invabund -%}
+          {{ iab }};
+        {% endfor %}
+
+      }
     }
   }
 
-  // naunet.Reset(MAX_NSYSTEMS);
-  naunet.Finalize();
+
+  // Solve cells as many as possible, but including ghost zone
+
+  // int cur = 0;
+
+  // while (cur < size) {
+  //   int nsystem = MAX_NSYSTEMS;
+  //   if (size - cur < MAX_NSYSTEMS) {
+  //     nsystem = size - cur;
+  //     naunet.Reset(nsystem);
+  //   }
+  //   cur += MAX_NSYSTEMS;
+
+  //   // set your parameters here
+  //   NaunetData *data = new NaunetData[nsystem];
+  //   for (i=0; i<nsystem; i++) {
+  //     data[i].nH = BaryonField[iden][i] / (Mu * mh);
+  //   }
+
+  //   float *y = new double[nsystem * NEQUATIONS];
+
+  //   for (sidx=0, i=cur; i<cur+nsystem; sidx+=NEQUATIONS, i++) {
+  //     {% for ab in abund -%}
+  //       {{ ab }};
+  //     {% endfor %}
+  //   }
+
+  //   naunet.Solve(y, dt_chem * TimeUnits, data);
+
+  //   for (sidx=0, i=cur; i<cur+nsystem; sidx+=NEQUATIONS, i++) {
+  //     {% for iab in invabund -%}
+  //       {{ iab }};
+  //     {% endfor %}
+  //   }
+  // }
 
   {% endif %}
 
-  if (HydroMethod != Zeus_Hydro) {
-    for (i = 0; i < size; i++) {
-      BaryonField[TENum][i] = thermal_energy[i] +
-        0.5 * POW(BaryonField[Vel1Num][i], 2.0);
-      if(GridRank > 1)
-        BaryonField[TENum][i] += 0.5 * POW(BaryonField[Vel2Num][i], 2.0);
-      if(GridRank > 2)
-        BaryonField[TENum][i] += 0.5 * POW(BaryonField[Vel3Num][i], 2.0);
+  naunet.Finalize();
 
-      if( UseMHD ) {
-        BaryonField[TENum][i] += 0.5 * (POW(BaryonField[iBx][i], 2.0) + 
-                                        POW(BaryonField[iBy][i], 2.0) + 
-                                        POW(BaryonField[iBz][i], 2.0)) / 
-          BaryonField[DensNum][i];
-      }
-
-    } // for (int i = 0; i < size; i++)
-  } // if (HydroMethod != Zeus_Hydro)
-
-  if (temp_thermal == TRUE) {
-    delete [] thermal_energy;
-  }
   delete [] temperature;
 
   delete [] TotalMetals;
