Update enzo patch

--- a/naunet/templates/patches/enzo/Grid.h.j2
+++ b/naunet/templates/patches/enzo/Grid.h.j2
@@ -1826,7 +1826,7 @@ int TransferSubgridActiveParticles(grid* Subgrids[], int NumberOfSubgrids,
 			    int &HMNum, int &H2INum, int &H2IINum,
                             int &DINum, int &DIINum, int &HDINum);
 
-  /* Identify Multi-species fields from KROME. */
+  /* Identify Multi-species fields from Naunet. */
   int IdentifyNaunetSpeciesFields({{ arguments | stmwrap(80, 32) }});
 
   /* Identify shock fields. */
