--- a/naunet/templates/patches/enzo/hydro_rk/Grid_UpdateElectronDensity.C.j2
+++ b/naunet/templates/patches/enzo/hydro_rk/Grid_UpdateElectronDensity.C.j2
@@ -11,6 +11,9 @@
 
 #include <stdio.h>
 #include <math.h>
+#ifdef USE_NAUNET
+#include "naunet_enzo.h"
+#endif
 #include "ErrorExceptions.h"
 #include "macros_and_parameters.h"
 #include "typedefs.h"
