--- a/naunet/templates/cvode/src/naunet_fex.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_fex.cpp.j2
@@ -38,7 +38,7 @@ __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
         NaunetData *udata      = &d_udata[cur];
 
         // clang-format off
-        {% for v in variables.varis -%}
+        {% for v in variables.varis.keys() -%}
             realtype {{ v }} = udata->{{ v }};
         {% endfor %}
 
@@ -46,7 +46,7 @@ __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
             {{ v }};
         {% endfor %}
 
-        {% for v in variables.tvaris -%}
+        {% for v in variables.tvaris.keys() -%}
             realtype {{ v }} = udata->{{ v }};
         {% endfor %}
         
@@ -90,7 +90,7 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
     realtype *ydot         = N_VGetArrayPointer(udot);
     NaunetData *u_data     = (NaunetData *)user_data;
     // clang-format off
-    {% for v in variables.varis -%}
+    {% for v in variables.varis.keys() -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -98,7 +98,7 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
         {{ v }};
     {% endfor %}
 
-    {% for v in variables.tvaris -%}
+    {% for v in variables.tvaris.keys() -%}
         realtype {{ v }} = u_data->{{ v }};
     {% endfor %}
 
