--- a/naunet/templates/odeint/src/naunet_ode.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_ode.cpp.j2
@@ -23,7 +23,7 @@ using namespace boost::numeric::odeint;
 
 int EvalRates(double *k, double *y, NaunetData *u_data) {
     // clang-format off
-    {% for v in variables.varis -%}
+    {% for v in variables.varis.keys() -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -56,7 +56,7 @@ int EvalRates(double *k, double *y, NaunetData *u_data) {
 
 int EvalHeatingRates(double *kh, double *y, NaunetData *u_data) {
     // clang-format off
-    {% for v in variables.varis -%}
+    {% for v in variables.varis.keys() -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
     // clang-format on
@@ -81,7 +81,7 @@ int EvalHeatingRates(double *kh, double *y, NaunetData *u_data) {
 
 int EvalCoolingRates(double *kc, double *y, NaunetData *u_data) {
     // clang-format off
-    {% for v in variables.varis -%}
+    {% for v in variables.varis.keys() -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
     // clang-format on
@@ -149,11 +149,11 @@ void Fex::operator()(const vector_type &abund, vector_type &ydot, double t) {
         y[i] = abund[i];
     }
 
-    {% for v in variables.varis -%}
+    {% for v in variables.varis.keys() -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
-    {% for v in variables.tvaris -%}
+    {% for v in variables.tvaris.keys() -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
@@ -221,11 +221,11 @@ void Jac::operator()(const vector_type &abund, matrix_type &j, const double &t,
         y[i] = abund[i];
     }
 
-    {% for v in variables.varis -%}
+    {% for v in variables.varis.keys() -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
-    {% for v in variables.tvaris -%}
+    {% for v in variables.tvaris.keys() -%}
         double {{ v }} = u_data->{{ v }};
     {% endfor %}
 
