Create rendering variables information in network

--- a/naunet/templates/odeint/CMakeLists.txt.j2
+++ b/naunet/templates/odeint/CMakeLists.txt.j2
@@ -39,7 +39,7 @@ set(NVIDIA_GPU_COUNT 0)
 set(MAKE_STATIC ON CACHE BOOL "")
 set(MAKE_SHARED ON CACHE BOOL "")
 set(MAKE_PYTHON OFF CACHE BOOL "")
-set(MAKE_TEST OFF CACHE BOOL "")
+set(MAKE_TEST ON CACHE BOOL "")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if(MAKE_PYTHON)
