Rename some variables

--- a/naunet/templates/cvode/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/CMakeLists.txt.j2
@@ -96,7 +96,7 @@ set(MAKE_TEST ON CACHE BOOL "")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if(MAKE_PYTHON)
-    set(PYMODNAME "chemistry" CACHE STRING "")
+    set(PYMODNAME "pynaunet" CACHE STRING "")
     find_package(PythonInterp REQUIRED)
 endif()
 
